--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,12 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	// https://mvnrepository.com/artifact/org.hibernate/hibernate-core
-	implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	implementation 'org.springframework.data:spring-data-jpa:2.6.1'
+
+// https://mvnrepository.com/artifact/org.postgresql/postgresql
+	implementation 'org.postgresql:postgresql:42.3.1'
 
 }
 
