--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 
+
+spring.datasource.url=jdbc:postgresql://34.71.5.100:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=2044
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+spring.h2.console.enabled=true
+
+spring.jackson.serialization.fail-on-empty-beans=false
+
+
+
+
